# livekit-voice-agent-mastery

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: quality.yml  secret-scan.yml
01_basics/: advanced_session_events.py  basic_agent.py  prewarming_agent.py  session_configuration.py  session_events.py
02_tasks_and_workflows/: 1_simple_task.py  2_complex_task.py  3_unordered_task.py  4_task_groups.py
03_routing_and_handoffs/: agent_handoffs.py  token_dispatching.py
04_rpc_communication/: mock_ui_client.py  rpc_from_frontend.py  rpc_to_frontend.py
05_custom_plugins/: use_custom_tts_agent.py
05_custom_plugins/custom_xtts_plugin/: xtts.py
06_testing_and_evals/: README.md  eval_assistant.py
07_observability/: README.md  usage_metrics_agent.py
08_telephony/: README.md  sip_inbound_agent.py
09_web_demo/: README.md  server.py
09_web_demo/static/: app.js  index.html  styles.css
docs/: day2_dispatching_and_behavior.md  deployment_guide.md  learning_path.md  security.md  troubleshooting.md
livekit_mastery/: __init__.py  config.py  session.py  xtts.py
tests/: test_config.py  test_rpc_state.py  test_security.py  test_xtts.py
