[project]
name = "livekit-voice-agent-mastery"
version = "0.1.0"
description = "A structured learning path for building LiveKit voice agents with OpenAI-compatible models and XTTS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12",
    "livekit-agents[openai,silero,turn-detector]~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["livekit_mastery*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
